{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 81,
  "lineage": "26b292d7-42bf-8d74-8a5e-12248a1bc342",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029c21b64e075242f",
            "domain": "vpc",
            "id": "eipalloc-029c21b64e075242f",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-24-18-79.us-west-2.compute.amazonaws.com",
            "public_ip": "52.24.18.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "Wave-cycle"
            },
            "tags_all": {
              "hashicorp-learn": "module-use",
              "name": "Wave-cycle"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590436734461:security-group/sg-011160677e881893f",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [],
            "id": "sg-011160677e881893f",
            "ingress": [],
            "name": "Wave-cycle-20221003185910016300000001",
            "name_prefix": "Wave-cycle-",
            "owner_id": "590436734461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wave-cycle"
            },
            "tags_all": {
              "Name": "Wave-cycle",
              "hashicorp-learn": "module-use"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b3ed58a44c39b1d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1708209769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-011160677e881893f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6cc8615607244e9",
            "domain": "vpc",
            "id": "eipalloc-0a6cc8615607244e9",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-225-107-85.us-west-2.compute.amazonaws.com",
            "public_ip": "44.225.107.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Wave-cycle-us-west-2a"
            },
            "tags_all": {
              "Name": "Wave-cycle-us-west-2a",
              "hashicorp-learn": "module-use"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590436734461:internet-gateway/igw-0d7f9ee46aec528e3",
            "id": "igw-0d7f9ee46aec528e3",
            "owner_id": "590436734461",
            "tags": {
              "Name": "Wave-cycle"
            },
            "tags_all": {
              "Name": "Wave-cycle",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0b3ed58a44c39b1d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6cc8615607244e9",
            "connectivity_type": "public",
            "id": "nat-04a273f5989293429",
            "network_interface_id": "eni-0b35bbb2a9c84026a",
            "private_ip": "190.0.0.156",
            "public_ip": "44.225.107.85",
            "subnet_id": "subnet-030796328680836ba",
            "tags": {
              "Name": "Wave-cycle-us-west-2a"
            },
            "tags_all": {
              "Name": "Wave-cycle-us-west-2a",
              "hashicorp-learn": "module-use"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-094b24a381b5531161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04a273f5989293429",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094b24a381b553116",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d7f9ee46aec528e3",
            "id": "r-rtb-064cbb5e896e6a7d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064cbb5e896e6a7d7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590436734461:route-table/rtb-094b24a381b553116",
            "id": "rtb-094b24a381b553116",
            "owner_id": "590436734461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Wave-cycle-private-us-west-2a"
            },
            "tags_all": {
              "Name": "Wave-cycle-private-us-west-2a",
              "hashicorp-learn": "module-use"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3ed58a44c39b1d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590436734461:route-table/rtb-064cbb5e896e6a7d7",
            "id": "rtb-064cbb5e896e6a7d7",
            "owner_id": "590436734461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Wave-cycle-public"
            },
            "tags_all": {
              "Name": "Wave-cycle-public",
              "hashicorp-learn": "module-use"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3ed58a44c39b1d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b825734a0163cb9",
            "route_table_id": "rtb-094b24a381b553116",
            "subnet_id": "subnet-0267bc633a92a998a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0129c52dac05eb6fd",
            "route_table_id": "rtb-064cbb5e896e6a7d7",
            "subnet_id": "subnet-030796328680836ba"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590436734461:subnet/subnet-0267bc633a92a998a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "190.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0267bc633a92a998a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590436734461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Wave-cycle-private-us-west-2a"
            },
            "tags_all": {
              "Name": "Wave-cycle-private-us-west-2a",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0b3ed58a44c39b1d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590436734461:subnet/subnet-030796328680836ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "190.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030796328680836ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590436734461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Wave-cycle-public-us-west-2a"
            },
            "tags_all": {
              "Name": "Wave-cycle-public-us-west-2a",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0b3ed58a44c39b1d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:590436734461:vpc/vpc-0b3ed58a44c39b1d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.0.0.0/16",
            "default_network_acl_id": "acl-0eeed1aba4b68d8e6",
            "default_route_table_id": "rtb-014e56d6096ed12ad",
            "default_security_group_id": "sg-073283f5213c8d2c4",
            "dhcp_options_id": "dopt-078f19c80454c6f64",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b3ed58a44c39b1d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014e56d6096ed12ad",
            "owner_id": "590436734461",
            "tags": {
              "Name": "Wave-cycle"
            },
            "tags_all": {
              "Name": "Wave-cycle",
              "hashicorp-learn": "module-use"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}